<resources>
    <string name="app_name">FiatScape</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="active">Active</string>
    <string name="new_coin">New</string>
    <string name="last_refreshed">Last Refreshed: %1$s</string>
    <string name="refresh">Refresh</string>
    <string name="hello">Hello!</string>
    <string name="favorite_coin">Favorite Coin</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="rank">Rank</string>
    <string name="type">Type</string>
    <string name="error_graph_currenly_unavaiable">Error: Graph Currenly Unavaiable</string>
    <string name="current_price">Current Price: %1$s</string>
    <string name="no_favorite_coins">No favorite coins added. Add new coins to favorites to find them here.</string>
    <string name="input_currency_name">Input currency name</string>
</resources>
